--- a/src/IDC.Api/IDC.Api.csproj
+++ b/src/IDC.Api/IDC.Api.csproj
@@ -1,20 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\IDC.Domain\IDC.Domain.csproj" />
-    <ProjectReference Include="..\IDC.Infrastructure\IDC.Infrastructure.csproj" />
-    <ProjectReference Include="..\IDC.Service\IDC.Application.csproj" />
-    <ProjectReference Include="..\IDC.Shared\IDC.Shared.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\IDC.Domain\IDC.Domain.csproj" />
+		<ProjectReference Include="..\IDC.Infrastructure\IDC.Infrastructure.csproj" />
+		<ProjectReference Include="..\IDC.Service\IDC.Application.csproj" />
+		<ProjectReference Include="..\IDC.Shared\IDC.Shared.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include="Controllers\" />
+	</ItemGroup>
 
 </Project>
