--- a/src/IDC.Api/IDC.Api.csproj
+++ b/src/IDC.Api/IDC.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
@@ -16,10 +16,6 @@
 		<ProjectReference Include="..\IDC.Infrastructure\IDC.Infrastructure.csproj" />
 		<ProjectReference Include="..\IDC.Service\IDC.Application.csproj" />
 		<ProjectReference Include="..\IDC.Shared\IDC.Shared.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="Controllers\" />
 	</ItemGroup>
 
 </Project>
