--- a/src/IDC.Api/IDC.Api.csproj
+++ b/src/IDC.Api/IDC.Api.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+		<PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
