--- a/src/IDC.Api/IDC.Api.csproj
+++ b/src/IDC.Api/IDC.Api.csproj
@@ -4,9 +4,13 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>1f2ea025-32ba-4448-becc-6915e0722711</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileContext>..\..</DockerfileContext>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 		<PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
 		<PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
@@ -15,9 +19,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\IDC.Application\IDC.Application.csproj" />
 		<ProjectReference Include="..\IDC.Domain\IDC.Domain.csproj" />
 		<ProjectReference Include="..\IDC.Infrastructure\IDC.Infrastructure.csproj" />
-		<ProjectReference Include="..\IDC.Service\IDC.Application.csproj" />
 		<ProjectReference Include="..\IDC.Shared\IDC.Shared.csproj" />
 	</ItemGroup>
 
