--- a/src/IDC.Api/Dockerfile
+++ b/src/IDC.Api/Dockerfile
@@ -8,17 +8,15 @@ COPY ["IDC.Api/IDC.Api.csproj", "IDC.Api/"]
 COPY ["IDC.Domain/IDC.Domain.csproj", "src/IDC.Domain/"]
 COPY ["IDC.Infrastructure/IDC.Infrastructure.csproj", "IDC.Infrastructure/"]
 COPY ["IDC.Shared/IDC.Shared.csproj", "IDC.Shared/"]
-COPY ["IDC.Service/IDC.Application.csproj", "IDC.Service/"]
+COPY ["IDC.Application/IDC.Application.csproj", "IDC.Application/"]
 
-RUN dotnet restore "./src/IDC.Api/IDC.Api.csproj"
+RUN dotnet restore "IDC.Api/IDC.Api.csproj"
 COPY . .
-WORKDIR "/src/src/IDC.Api"
-RUN dotnet build "./IDC.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/IDC.Api"
+RUN dotnet build "IDC.Api.csproj" -c Release -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./IDC.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "IDC.Api.csproj" -c Release -o /app/publish
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
