change name idc -> idc-web

--- a/src/IDC-Web.Api/IDC-Web.Api.csproj
+++ b/src/IDC-Web.Api/IDC-Web.Api.csproj
@@ -19,10 +19,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\IDC.Application\IDC.Application.csproj" />
-		<ProjectReference Include="..\IDC.Domain\IDC.Domain.csproj" />
-		<ProjectReference Include="..\IDC.Infrastructure\IDC.Infrastructure.csproj" />
-		<ProjectReference Include="..\IDC.Shared\IDC.Shared.csproj" />
+		<ProjectReference Include="..\IDC-Web.Application\IDC-Web.Application.csproj" />
+		<ProjectReference Include="..\IDC-Web.Infrastructure\IDC-Web.Infrastructure.csproj" />
 	</ItemGroup>
 
 </Project>
