--- a/src/IDC-Web.Infrastructure/IDC-Web.Infrastructure.csproj
+++ b/src/IDC-Web.Infrastructure/IDC-Web.Infrastructure.csproj
@@ -25,8 +25,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\IDC.Domain\IDC.Domain.csproj" />
-	  <ProjectReference Include="..\IDC.Shared\IDC.Shared.csproj" />
+	  <ProjectReference Include="..\IDC-Web.Domain\IDC-Web.Domain.csproj" />
+	  <ProjectReference Include="..\IDC-Web.Shared\IDC-Web.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
