--- a/src/IDC-Web.Api/Dockerfile
+++ b/src/IDC-Web.Api/Dockerfile
@@ -4,22 +4,22 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["IDC.Api/IDC.Api.csproj", "IDC.Api/"]
-COPY ["IDC.Domain/IDC.Domain.csproj", "src/IDC.Domain/"]
-COPY ["IDC.Infrastructure/IDC.Infrastructure.csproj", "IDC.Infrastructure/"]
-COPY ["IDC.Shared/IDC.Shared.csproj", "IDC.Shared/"]
-COPY ["IDC.Application/IDC.Application.csproj", "IDC.Application/"]
+COPY ["IDC-Web.Api/IDC-Web.Api.csproj", "IDC-Web.Api/"]
+COPY ["IDC-Web.Domain/IDC-Web.Domain.csproj", "IDC-Web.Domain/"]
+COPY ["IDC-Web.Infrastructure/IDC-Web.Infrastructure.csproj", "IDC-Web.Infrastructure/"]
+COPY ["IDC-Web.Shared/IDC-Web.Shared.csproj", "IDC-Web.Shared/"]
+COPY ["IDC-Web.Application/IDC-Web.Application.csproj", "IDC-Web.Application/"]
 
-RUN dotnet restore "IDC.Api/IDC.Api.csproj"
+RUN dotnet restore "IDC-Web.Api/IDC-Web.Api.csproj"
 COPY . .
-WORKDIR "/src/IDC.Api"
-RUN dotnet build "IDC.Api.csproj" -c Release -o /app/build
+WORKDIR "/src/IDC-Web.Api"
+RUN dotnet build "IDC-Web.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "IDC.Api.csproj" -c Release -o /app/publish
+RUN dotnet publish "IDC-Web.Api.csproj" -c Release -o /app/publish
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "IDC.Api.dll"]
+ENTRYPOINT ["dotnet", "IDC-Web.Api.dll"]
